<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="180dp"
                android:layout_height="46dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/antiflashwhite"
                android:hint="@string/first_name"
                android:textColorHint="@color/granitegrey"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="7dp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="188dp"
                android:layout_height="46dp"
                android:textColorHint="@color/granitegrey"
                android:background="@color/antiflashwhite"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="7dp"
                android:text=""
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <RadioButton
                android:id="@+id/radio_btn_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_btn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/birthday"
                android:layout_width="243dp"
                android:layout_height="46dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/granitegrey"
                android:background="@color/antiflashwhite"
                android:hint="@string/birthday"
                android:importantForAutofill="no"
                android:inputType="date"
                android:padding="7dp"
                android:text=""
                />

            <Button
                android:id="@+id/birthday_select"
                android:layout_width="110dp"
                android:layout_height="59dp"
                android:text="@string/select"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/address"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/address"
            android:layout_width="380dp"
            android:layout_height="90dp"
            android:background="@color/antiflashwhite"
            android:hint="@string/address"
            android:textColorHint="@color/granitegrey"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="380dp"
            android:layout_height="46dp"
            android:background="@color/antiflashwhite"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/granitegrey"
            android:padding="7dp"
            android:text="" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checked="false"
        android:text="@string/i_agree_to_terms_of_use"
        android:textSize="19sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/register"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/register_status"
            android:layout_margin="15px"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>